# openpose-ros-docker

./: Dockerfile  README.md  docker-compose.yml  openpose_server.yml
human_position/: CMakeLists.txt  package.xml  setup.py
human_position/msg/: HumanCoordinates.msg  HumanCoordinatesArray.msg  Keypoint.msg  Object.msg
human_position/scripts/: \  hands_up_pub.py  openpose_pub.py  openpose_server.py  point_pub.py  srvtest.py
human_position/src/human_position/: __init__.py  detect_person.py  detect_person_select_kill.py  pointing_person.py
human_position/srv/: SetDistanceOpenpose.srv
